--- a/blog/src/main/resources/templates/blocks/header.html
+++ b/blog/src/main/resources/templates/blocks/header.html
@@ -4,7 +4,7 @@
         <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Home</a></li>
         <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
         <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
-
+        <li class="nav-item"><a href="/blog/add" class="nav-link">Add article</a></li>
     </ul>
 </header>
 </div>
